# src/modules/carros/entities/Especificacao.ts
@@ -1,12 +1,18 @@
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import { v4 as uuidV4 } from "uuid";
 
+@Entity("especificacoes")
 class Especificacao {
+  @PrimaryColumn()
   id?: string;
 
+  @Column()
   nome: string;
 
-  desricao: string;
+  @Column()
+  descricao: string;
 
+  @CreateDateColumn()
   criado_em: Date;
 
   constructor() {
