# src/modules/carros/useCases/especificacoes/cadastroEspecificacao/CadastroEspecificacaoController.ts
@@ -1,16 +1,17 @@
 import { Request, Response } from "express";
+import { container } from "tsyringe";
 
 import { CadastroEspecificacaoUseCase } from "./CadastroEspecificacaoUseCase";
 
 class CadastroEspecificacaoController {
-  constructor(
-    private cadastroEspecificacaoUseCase: CadastroEspecificacaoUseCase
-  ) {}
-
-  handle(request: Request, response: Response): Response {
+  async handle(request: Request, response: Response): Promise<Response> {
     const { nome, descricao } = request.body;
 
-    this.cadastroEspecificacaoUseCase.execute({ nome, descricao });
+    const cadastroEspecificacaoUseCase = container.resolve(
+      CadastroEspecificacaoUseCase
+    );
+
+    await cadastroEspecificacaoUseCase.execute({ nome, descricao });
 
     return response.status(201).send();
   }
