# src/routes/categorias.rotas.ts
@@ -1,9 +1,11 @@
 import { Router } from "express";
 import multer from "multer";
 
+import "reflect-metadata";
+
 import { CadastroCategoriaController } from "../modules/carros/useCases/categorias/cadastroCategoria/CadastroCategoriaController";
-import { listarCategoriasController } from "../modules/carros/useCases/categorias/listarCategorias";
-import { importarCategoriaController } from "../modules/carros/useCases/categorias/importarCategoria";
+import { ImportarCategoriaController } from "../modules/carros/useCases/categorias/importarCategoria/ImportarCategoriaController";
+import { ListarCategoriasController } from "../modules/carros/useCases/categorias/listarCategorias/ListarCategoriasController";
 
 const categoriasRotas = Router();
 
@@ -12,15 +14,17 @@ const upload = multer({
 });
 
 const cadastroCategoriaController = new CadastroCategoriaController();
+const importarCategoriaController = new ImportarCategoriaController();
+const listarCategoriasController = new ListarCategoriasController();
 
 categoriasRotas.post("/", cadastroCategoriaController.handle);
 
-categoriasRotas.get("/", (request, response) => {
-  return listarCategoriasController.handle(request, response);
-});
+categoriasRotas.get("/", listarCategoriasController.handle);
 
-categoriasRotas.post("/import", upload.single("file"), (request, response) => {
-  return importarCategoriaController.handle(request, response);
-});
+categoriasRotas.post(
+  "/import",
+  upload.single("file"),
+  importarCategoriaController.handle
+);
 
 export { categoriasRotas };
